# FaceDescriptorExtractor

./: CMakeLists.txt  FaceDescriptorExtractor.cpp  FaceDescriptorExtractor.h  README.md  main.cpp
